--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-h1, h2 {
+h1, h2, h3, p {
   text-align: center
 }
 
@@ -6,6 +6,14 @@ ul li {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  align-items: center;
+  margin: 10px;
 }
 
 nav ul {
